# fast-api-example

./: README.md  pyproject.toml
src/: main.py
src/routers/: __init__.py  todo.py
src/schema/: Todo.py  __init__.py
tests/: test_main.http  test_todo.http
tests/data/: add_todo_01.json  add_todo_02.json  add_todo_03.json  put_todo_01.json
